--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="Netflix Open Source">
-    <meta name="title" content="Netflix Open Source">
+    <meta name="description" content="Portifolio">
+    <meta name="title" content="Rhayssa Rubya">
     <link rel="shortcut icon" href="https://assets.nflxext.com/us/ffe/siteui/common/icons/nficon2015.ico">
 
     <title>Netflujcrwqfgvwejgergfveegkeghix Open Source Software Center</title>
